--- a/front/package.json
+++ b/front/package.json
@@ -27,6 +27,7 @@
     "react-icons": "^5.2.1",
     "react-paginate": "^8.2.0",
     "react-pagination": "^1.0.0",
+    "react-quill": "^2.0.0",
     "react-router-dom": "6.12.1",
     "reactstrap": "^9.2.0",
     "sass": "1.63.2",
