--- a/back/src/main/resources/application.properties
+++ b/back/src/main/resources/application.properties
@@ -17,3 +17,6 @@ spring.jpa.generate-ddl=true
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
+
+#image
+upload.path=C:/uploadTest
