--- a/front/package.json
+++ b/front/package.json
@@ -16,6 +16,7 @@
     "axios": "^1.7.2",
     "bootstrap": "5.3.0",
     "bootstrap-icons": "1.10.5",
+    "data-fns": "^1.1.0",
     "date-fns": "^3.6.0",
     "history": "5.3.0",
     "http-proxy-middleware": "^3.0.0",
