--- a/front/package.json
+++ b/front/package.json
@@ -24,6 +24,8 @@
     "prop-types": "15.8.1",
     "react": "18.2.0",
     "react-apexcharts": "1.4.0",
+    "react-cookie": "^7.2.0",
+    "react-cookies": "^0.1.1",
     "react-dom": "18.2.0",
     "react-icons": "^5.2.1",
     "react-paginate": "^8.2.0",
